--- a/templates/controller_interfaces.erb
+++ b/templates/controller_interfaces.erb
@@ -15,5 +15,5 @@ auto <%= scope.lookupvar("icclab::params::external_bridge_name") %>
 iface <%= scope.lookupvar("icclab::params::external_bridge_name") %> inet static
 address <%= scope.lookupvar("icclab::params::controller_node_ext_address") %>
 netmask 255.255.255.0
-gateway <%= scope.lookupvar("$icclab::params::foreman_svcs") %>
-dns-nameservers <%= scope.lookupvar("$icclab::params::foreman_svcs") %>
+gateway <%= scope.lookupvar("icclab::params::foreman_svcs") %>
+dns-nameservers <%= scope.lookupvar("icclab::params::foreman_svcs") %>
